Fix truncated teardrop arrow on mobile.

--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -539,6 +539,9 @@ noscript {
         padding: 0 20px 20px;
         font-size: 18px;
     }
+    .version-message {
+        padding-top: 2px; // so the teardrop arrow doesn't get cropped
+    }
     #main-feature {
         margin: 0;
         padding: 0 10px;
